# Axolotl

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  ruff.toml
backend/: .coveragerc  alembic.ini  langgraph.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_orchestration_mode.py
backend/app/: config.py  main.py
backend/app/api/v1/: agents.py  chat.py  documents.py  mcp_servers.py  projects.py  router.py  skills.py  tools.py
backend/app/core/: mcp_server.py  redis.py
backend/app/core/langgraph/: factory.py  state.py
backend/app/core/langgraph/graphs/: deep_agent.py  rag_agent.py  simple_agent.py  supervisor.py  swarm.py
backend/app/core/langgraph/tools/: api_tool.py  (+2 more)
backend/app/core/llm/: provider.py
backend/app/core/vector_store/: client.py
backend/app/models/: __init__.py  agent.py  conversation.py  database.py  document.py  mcp_server.py  project.py  skill.py  tool.py
backend/app/services/: agent_resolver.py  document_service.py  orchestrator.py
backend/scripts/: setup_petshop.py  test_petshop.py
backend/scripts/data/: catalogo_produtos.txt  cuidados_saude.txt  tabela_precos.txt
backend/tests/: conftest.py  factories.py  test_agent_resolver.py  test_agents.py  test_api_tool.py  test_chat.py  test_config.py  test_deep_agent.py  test_document_service.py  test_documents.py  test_health.py  test_llm_provider.py  test_mcp_manager.py  test_mcp_servers.py  test_orchestrator.py  test_projects.py  test_redis.py  test_skills.py  test_tool_registry.py  test_tools.py
(+14 files in other folders)
