[project]
name = "axolotl"
version = "0.1.0"
description = "A regenerative multi-agent framework. Build once, adapt everywhere."
requires-python = ">=3.11"

dependencies = [
    # Core
    "langgraph>=1.1.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-redis>=0.1.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # LLM Providers
    "langchain-openai>=0.3.27",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=1.0.0",

    # MCP
    "langchain-mcp-adapters>=0.1.0",
    "fastmcp>=0.1.0",

    # Multi-Agent
    "langgraph-supervisor>=0.0.1",
    "deepagents>=0.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # RAG
    "chromadb>=1.0.0",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",

    # Utilities
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "deepeval>=1.0.0",
    "ragas>=0.2.0",
    "ruff>=0.8.0",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
